<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llport"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/connetpor_selector"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/connectport"
                android:layout_width="60dp"

                android:layout_marginLeft="3dp"
                android:layout_height="match_parent"
                android:entries="@array/port"
                android:background="@drawable/spiner_selector"
                android:spinnerMode="dropdown"
                />
            <Button
                android:id="@+id/buttonSB"
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:visibility="visible"
                style="@style/ButtonText"
                android:text="@string/sb" />
            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/showET"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"

                android:ems="10"
                android:hint="@string/hint" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:enabled="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/connect" />
        <Button
            android:id="@+id/buttonDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            style="@style/ButtonText"
            android:text="@string/discon"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/buttonpos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            style="@style/ButtonText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/start_pos_activity" />

        <Button
            android:id="@+id/button76"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            style="@style/ButtonText"
            android:text="@string/start_76_activity" />
        <Button
            android:id="@+id/buttonTsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:enabled="true"
            style="@style/ButtonText"
            android:text="@string/start_tsc_activity" />


        </LinearLayout>


</android.support.design.widget.CoordinatorLayout>


