<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tsc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.xprinter.posconsend.activity.TscActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/content"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/contextandcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tsctext"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tscbarcode"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tscread"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/rlimage"
            android:background="@drawable/spiner_selector"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <Button
            android:id="@+id/tscpic"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/test"
            android:layout_marginTop="20dp"
            android:text="测试"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
