<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xprinter.posconsend.activity.PosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:enabled="true"
            android:text="@string/text" />
        <Button
            android:id="@+id/btbarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:enabled="true"
            android:layout_marginTop="20dp"
            android:text="@string/barcode" />
        <Button
            android:id="@+id/qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:enabled="true"
            android:layout_marginTop="20dp"
            android:text="@string/qrcode" />

        <RelativeLayout
            android:id="@+id/rl"
            android:background="@drawable/spiner_selector"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <Button
            android:id="@+id/btpic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:enabled="true"
            android:layout_marginTop="20dp"
            android:text="@string/image" />



    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
